<resources>
    <string name="app_name">Popular Movies</string>
    <string name="detail_label">Movie Detail</string>

    <string name="content_authority" translatable="false">com.jkm.popularmovies</string>
    <string name="content_provider_unknown_uri">Unknown URI:&#160;</string>
    <string name="content_provider_not_implemented">Not implemented method</string>
    <string name="loader_not_implemented">Loader not implemented&#160;</string>

    <string name="poster_description">Movie Poster</string>

    <string name="favorites">Favorites</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>

    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="reviews">Reviews</string>

    <string name="add_favorite">Add to&#160;</string>
    <string name="remove_favorite">Remove from&#160;</string>
    <string name="added_to_favorites">Added to Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>

    <string name="failed_fetch_popular">Failed to fetch Popular Movies</string>
    <string name="failed_fetch_top_rated">Failed to fetch Top Rated Movies</string>
    <string name="failed_show_detail">Failed to show Movie detail</string>
    <string name="failed_fetch_reviews">Failed to fetch Movie reviews</string>
    <string name="failed_fetch_trailers">Failed to fetch Movie trailers</string>
    <string name="no_results">No results</string>
    <string name="no_reviews">No reviews</string>
    <string name="no_favorites">Click \"Add to Favorites\" to show your favorite movies here!</string>

    <string name="youtube" translatable="false">YouTube</string>
    <string name="youtube_app" translatable="false">vnd.youtube:</string>

    <string name="max_rating" translatable="false">/10.0</string>
    <string name="youtube_thumbnail_suffix_link" translatable="false">/0.jpg</string>

    <string name="read_more">read more</string>
    <string name="read_less">read less</string>

    <string name="movie_db_date_format" translatable="false">yyyy-MM-dd</string>
    <string name="date_format" translatable="false">MMMM d, yyyy</string>

    <string name="sort_key" translatable="false">Sort Key</string>
    <string name="popular_movies_key" translatable="false">Popular Movies Key</string>
    <string name="top_rated_movies_key" translatable="false">Top Rated Movies Key</string>
    <string name="popular_page_key" translatable="false">Popular Page Key</string>
    <string name="top_rated_page_key" translatable="false">Top Rated Page Key</string>
    <string name="detail_key" translatable="false">Detail Key</string>
    <string name="trailer_key" translatable="false">Trailer Key</string>
    <string name="trailer_link_key" translatable="false">Trailer Link Key</string>
    <string name="review_key" translatable="false">Review Key</string>
    <string name="review_page_key" translatable="false">Review Page Key</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
</resources>