<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:focusableInTouchMode="true"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_large"
            tools:text="Beauty and the Beast" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_poster_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/poster_description"
                tools:src="@drawable/placeholder" />

            <LinearLayout
                android:id="@+id/layout_movie_part_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:id="@+id/tv_release_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/font_normal"
                    tools:text="March 16, 2017" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:id="@+id/tv_rating_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/font_normal"
                    tools:text="6.8/10.0" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/font_normal"
            tools:text="A live-action adaptation of Disney's version of the classic 'Beauty and the Beast' tale of a cursed prince and a beautiful young woman who helps him break the spell." />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="?android:attr/listDivider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/vertical_margin">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_review_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/tv_review_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="@dimen/vertical_margin"
                android:text="@string/no_reviews"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/font_normal"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/pb_review_detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingTop="@dimen/vertical_margin"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>